--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   flutter: 
     sdk: flutter
   http: ^0.13.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies: 
   flutter_lints: ^2.0.0
